--- a/FIBApp/en.lproj/MainStoryboard.storyboard
+++ b/FIBApp/en.lproj/MainStoryboard.storyboard
@@ -1,23 +1,155 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="2519" systemVersion="12A206j" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="2">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="3084" systemVersion="12D78" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="iRg-dk-3Ro">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="1856"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="2083"/>
     </dependencies>
     <scenes>
-        <!--class Prefix:identifier View Controller-->
+        <!--View Controller - Home-->
         <scene sceneID="5">
             <objects>
                 <viewController id="2" customClass="ViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="3">
-                        <rect key="frame" x="0.0" y="20" width="320" height="460"/>
+                        <rect key="frame" x="0.0" y="64" width="320" height="504"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="mvO-FZ-zJl">
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="seguedetail" id="bud-hn-JpC">
+                                        <rect key="frame" x="0.0" y="22" width="320" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                            <rect key="frame" x="0.0" y="0.0" width="300" height="43"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                        </view>
+                                        <connections>
+                                            <segue destination="OYa-oT-rgh" kind="push" identifier="seguedetail" id="rFA-x8-WGp"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="2" id="aBC-ye-VXY"/>
+                                    <outlet property="delegate" destination="2" id="JQe-f6-j2U"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="mvO-FZ-zJl" firstAttribute="trailing" secondItem="3" secondAttribute="trailing" type="default" id="52P-zq-qfd"/>
+                            <constraint firstItem="mvO-FZ-zJl" firstAttribute="top" secondItem="3" secondAttribute="top" type="default" id="BFG-WO-2FZ"/>
+                            <constraint firstItem="mvO-FZ-zJl" firstAttribute="leading" secondItem="3" secondAttribute="leading" type="default" id="hYA-2Z-3mW"/>
+                            <constraint firstItem="mvO-FZ-zJl" firstAttribute="bottom" secondItem="3" secondAttribute="bottom" type="default" id="lng-X9-UfB"/>
+                        </constraints>
                     </view>
+                    <navigationItem key="navigationItem" title="Home" id="rgt-Q5-Ya4"/>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
+                    <connections>
+                        <outlet property="table" destination="mvO-FZ-zJl" id="qrb-um-81t"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="1366" y="156"/>
+        </scene>
+        <!--Detail View Controller - Detail-->
+        <scene sceneID="Wot-4w-bHM">
+            <objects>
+                <viewController storyboardIdentifier="detail" title="Detail" useStoryboardIdentifierAsRestorationIdentifier="YES" id="OYa-oT-rgh" customClass="DetailViewController" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Kbg-Kv-u98">
+                        <rect key="frame" x="0.0" y="64" width="320" height="504"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3Jx-S6-XK0">
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="35" id="Bih-Pl-1iR"/>
+                                    <constraint firstAttribute="width" constant="268" id="Vxw-K7-6dx"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" image="Default.png" translatesAutoresizingMaskIntoConstraints="NO" id="PoZ-oe-dUV">
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="128" id="NAc-c5-cZZ"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IlY-Nn-rQx">
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="307" id="zft-my-l7K"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="3Jx-S6-XK0" secondAttribute="trailing" constant="20" symbolic="YES" type="default" id="3fC-vP-sRF"/>
+                            <constraint firstAttribute="trailing" secondItem="IlY-Nn-rQx" secondAttribute="trailing" constant="20" symbolic="YES" type="default" id="8Hf-s5-BCM"/>
+                            <constraint firstAttribute="trailing" secondItem="PoZ-oe-dUV" secondAttribute="trailing" constant="20" symbolic="YES" type="default" id="MI9-BN-KNm"/>
+                            <constraint firstItem="PoZ-oe-dUV" firstAttribute="leading" secondItem="3Jx-S6-XK0" secondAttribute="leading" type="default" id="Zee-c9-Naz"/>
+                            <constraint firstItem="IlY-Nn-rQx" firstAttribute="leading" secondItem="PoZ-oe-dUV" secondAttribute="leading" type="default" id="cDh-7B-j9y"/>
+                            <constraint firstItem="PoZ-oe-dUV" firstAttribute="top" secondItem="Kbg-Kv-u98" secondAttribute="top" constant="77" id="fg5-iD-3Wv"/>
+                            <constraint firstAttribute="bottom" secondItem="IlY-Nn-rQx" secondAttribute="bottom" constant="20" symbolic="YES" type="default" id="i6Q-lF-Mgj"/>
+                            <constraint firstItem="3Jx-S6-XK0" firstAttribute="top" secondItem="Kbg-Kv-u98" secondAttribute="top" constant="26" id="rfH-8G-SO5"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" title="Detail" id="XSN-MY-aRd">
+                        <barButtonItem key="backBarButtonItem" title="Home" id="d4k-2N-PZE"/>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="description" destination="IlY-Nn-rQx" id="CFh-wy-D0f"/>
+                        <outlet property="gtitle" destination="3Jx-S6-XK0" id="06q-vh-naN"/>
+                        <outlet property="image" destination="PoZ-oe-dUV" id="zgr-TH-ob4"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="f6B-so-J1F" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2055" y="173"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="i93-aO-hGS">
+            <objects>
+                <navigationController id="iRg-dk-3Ro" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="MhX-Xo-vc6">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="2" kind="relationship" relationship="rootViewController" id="y26-eM-JEl"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Btc-pW-Ccy" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="840" y="156"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="Default.png" width="320" height="480"/>
+    </resources>
+    <classes>
+        <class className="DetailViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/DetailViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="description" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="gtitle" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="image" candidateClass="UIImageView"/>
+            </relationships>
+        </class>
+        <class className="NSLayoutConstraint" superclassName="NSObject">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/NSLayoutConstraint.h"/>
+        </class>
+        <class className="ViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/ViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="table" candidateClass="UITableView"/>
+            </relationships>
+        </class>
+    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
